# mpscraper

./: .gitignore  README.md  pyproject.toml
mpscraper/: __init__.py  __main__.py  application.py  const.py  crawler.py  database.py  models.py  parser.py  static.py  util.py  validators.py
