[tool.poetry]
name = "mpscraper"
version = "0.1.0"
description = ""
authors = ["Ignacio Barros <ignacio.bblanco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
splinter = "^0.18.1"
loguru = "^0.6.0"
sqlalchemy = "2.0rc1"
pandas = "^1.5.2"
lxml = "^4.9.2"
bs4 = "^0.0.1"
openpyxl = "^3.0.10"
phonenumbers = "^8.13.3"
deepmerge = "^1.1.0"
orjson = "^3.8.4"
playwright = "^1.29.1"

[tool.poetry.scripts]
main = "mpscraper.application:main"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipython = "^8.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
